<resources>
    <string name="app_name">HouseNow</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>


    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_login">Ingresar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="hint_email">Correo</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_first_surname">Apellido paterno</string>
    <string name="hint_second_surname">Apellido materno</string>
    <string name="button_create">Crear</string>

    <!-- TODO: Tabs -->
    <string name="tab_seach_simple">Simple</string>
    <string name="tab_seach_advanced">Avanzada</string>
    <string name="tab_seach_maps">Mapas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_referencia_tabs">ReferenciaTabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Toolbar tittles -->
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="toolbar_tittle_properties_list">Resultado de búsqueda</string>
    <string name="toolbar_tittle_properties_detail">Detalle del inmueble</string>
    <string name="transitionname_picture">transitionnamepicture</string>

</resources>
